--- a/style.css
+++ b/style.css
@@ -1,119 +1,12 @@
 * {
-  box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-html {
-  scroll-behavior: smooth;
+  box-sizing: border-box;
 }
 
 body {
-  font-family: "Noto Sans", sans-serif;
-  background-color: #141d26;
-  color: white;
-  overflow-x: hidden;
-}
-
-/* navbar */
-nav {
-  background-color: #141d26;
-  display: flex;
-  justify-content: space-around;
-  height: 50px;
-  align-items: center;
-  color: rgb(241, 241, 213);
-  position: fixed;
-  top: 0;
-  width: 100%;
-  z-index: 1;
-}
-nav h1 {
-  font-size: 30px;
-  font-weight: bold;
-  padding-top: 20px;
-}
-nav ul {
-  padding-top: 25px;
-  list-style: none;
-  display: flex;
-  justify-content: space-between;
-  width: 30%;
-}
-nav ul a {
-  text-decoration: none;
-  color: rgb(241, 241, 213);
-  position: relative;
-}
-nav ul li :hover {
-  color: white;
-}
-
-/* hamburger menu */
-.menu-toggle {
-  display: none;
-  flex-direction: column;
-  height: 18px;
-  justify-content: space-between;
-  position: relative;
-}
-
-.menu-toggle span {
-  display: block;
-  width: 25px;
-  height: 3px;
-  background-color: rgb(241, 241, 213);
-  border-radius: 3px;
-  transition: all 0.3s;
-}
-
-.menu-toggle input {
-  position: absolute;
-  width: 46px;
-  height: 24px;
-  right: -10px;
-  top: -3px;
-  opacity: 0;
-  z-index: 2;
-}
-
-.menu-toggle span:nth-child(2) {
-  transform-origin: 0 0;
-}
-
-.menu-toggle span:last-child {
-  transform-origin: 0 100%;
-}
-.menu-toggle input:checked ~ span:nth-child(2) {
-  transform: rotate(45deg) translate(-1px, -1px);
-}
-
-.menu-toggle input:checked ~ span:nth-child(3) {
-  transform: scale(0);
-}
-
-.menu-toggle input:checked ~ span:last-child {
-  transform: rotate(-45deg);
-}
-
-/* line animation navbar */
-nav ul li {
-  position: relative;
-}
-
-nav ul li ::after {
-  content: "";
-  position: absolute;
-  width: 100%;
-  height: 3px;
-  left: 0;
-  bottom: -10px;
-  background-color: rgb(241, 241, 213);
-  transform: scale(0, 1);
-  transition: all 0.3s ease;
-}
-
-nav ul li:hover ::after {
-  transform: scale(1, 1);
+  font-family: sans-serif;
+  background-color: black;
 }
 
 .intro {
@@ -125,17 +18,19 @@ nav ul li:hover ::after {
   width: 100%;
   object-fit: cover;
 }
+
 .intro h1 {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  font-size: 70px;
+  font-size: 80px;
+  color: white;
 }
 
 section {
   height: 100vh;
-  color: white;
+  /* color: black; */
 }
 
 section h1 {
@@ -144,37 +39,70 @@ section h1 {
   font-size: 80px;
 }
 
-/* responsive */
-/* tablet */
-@media screen and (max-width: 768px) {
-  nav ul {
-    width: 60%;
-  }
-}
-/* mobile */
-@media screen and (max-width: 576px) {
-  nav ul {
-    position: absolute;
-    top: 0;
-    right: 0;
-    flex-direction: column;
-    height: 40vh;
-    background-color: #657786;
-    text-align: center;
-    justify-content: space-evenly;
-    width: 100%;
-    z-index: -1;
-    transform: translateY(-100%);
-    transition: all 0.3s;
-  }
-
-  nav ul.pop {
-    transform: translateX(0);
-  }
-  .menu-toggle {
-    display: flex;
-  }
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.container {
+.intro {
+  background-image: url("gambar/bintang-jatuh.jpg");
+  background-size: cover;
+  padding-top: 00px;
+  /* height: 100vh;
+  width: 100%; */
+}
+.navbar-inner {
+  background: transparent;
+}
+.about h1 {
+  font-size: 75px;
+}
+
+body {
+  background-color: black;
+  overflow-x: hidden;
+}
+
+/* about */
+.about {
+  width: 1000px;
+}
+.about h1 {
+  font-size: 2.3rem;
+}
+.about .intro {
+  padding-right: 50px;
+}
+.about .intro-text {
+  padding-top: 100px;
+}
+
+/* gallery */
+.caption {
+  position: absolute;
+  background-color: black;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  opacity: 0;
+  transition: all 0.5s;
+  padding: 0;
+}
+
+.caption:hover {
+  opacity: 1;
+}
+
+.relative {
+  position: relative;
+}
+
+.caption p {
+  font-size: 30px;
+  font-weight: bold;
 }
